# 115-agent

./: .gitignore  .webui-settings.json  README.md  pyproject.toml
115_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
agent_115/: __init__.py  client.py  exceptions.py  models.py
agent_115/api/: __init__.py  directory.py  extract.py  files.py  life.py  share.py
agent_115/ops/: __init__.py  unzip.py
cli/: __init__.py  main.py
docs/: batch-rename-workflow.md
mcp_server/: __init__.py  server.py
tests/: test_directory_rate_limit.py  test_directory_tree.py  test_rate_limiter.py
web/: README.md
web/backend/: __init__.py  app.py  auth.py  jobs.py  routes_auth.py  routes_files.py  routes_jobs.py
web/frontend/: index.html  package-lock.json  package.json  vite.config.js
web/frontend/src/: App.jsx  styles.css
